--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,15 @@
   <script src="//aui-cdn.atlassian.com/aui-adg/5.8.12/js/aui-datepicker.js"></script>
   <script src="//aui-cdn.atlassian.com/aui-adg/5.8.12/js/aui-experimental.js"></script> -->
   <script src="https://connect-cdn.atl-paas.net/all.js" type="text/javascript"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PB0921WXMF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PB0921WXMF');
+</script>
 </head>
 <body class="aui-page-hybrid">
   <section id="content" role="main">
