feat: send event slide_used

--- a/views/slide.hbs
+++ b/views/slide.hbs
@@ -13,4 +13,5 @@
 
 <script type="text/javascript">
     const parameters = "{{{parameters_string}}}";
+    gtag('event', 'slide_used', {'parameters': parameters});
 </script>
