--- a/views/slideSettings.hbs
+++ b/views/slideSettings.hbs
@@ -1,6 +1,10 @@
 {{!< layout}}
 
 <div data-parameters-object="{{{parameters_object}}}" data-parameters-string="{{{parameters_string}}}" data-parameters-object2="{{parameters_object}}" data-parameters-string2="{{parameters_string}}">
+    {{#if body}}
+    <button onclick="showParams()">Show config</button>
+    {{/if}}
+    <div id="params"></div>
 </div>
 
 <input type="hidden" id="slideParams" name="slideParams" value="{{{parameters_object}}}">
@@ -9,5 +13,8 @@
 <input type="hidden" id="slideParams4" name="slideParams4" value="{{parameters_string}}">
 
 <script type="text/javascript">
-    const parameters = "{{{parameters_string}}}";
+  const parameters = "{{{parameters_string}}}";
+  function showParams() {
+    document.getElementById("params").innerHTML = parameters;
+  }
 </script>
