--- a/views/slideSettings.hbs
+++ b/views/slideSettings.hbs
@@ -1,10 +1,11 @@
 {{!< layout}}
 
 <div data-parameters-object="{{{parameters_object}}}" data-parameters-string="{{{parameters_string}}}" data-parameters-object2="{{parameters_object}}" data-parameters-string2="{{parameters_string}}">
-    {{#if body}}
+  {{#if body}}
     <button onclick="showParams()">Show config</button>
-    {{/if}}
-    <div id="params"></div>
+    {{{body}}}
+  {{/if}}
+  <div id="params"></div>
 </div>
 
 <input type="hidden" id="slideParams" name="slideParams" value="{{{parameters_object}}}">
