feat: test button

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,15 @@
 <body class="aui-page-hybrid">
   <section id="content" role="main">
     {{{body}}}
+    <button onclick="showParams()">Show config</button>
+    <div id="params"></div>
   </section>
   <script src="/js/addon.js"></script>
+  <script type="text/javascript">
+    const parameters = "{{{parameters_string}}}";
+    function showParams() {
+      document.getElementById("params").innerHTML = parameters;
+    }
+  </script>
 </body>
 </html>
